# sq

./: Cargo.toml  README.md
examples/: csv2pq.rs
sq/: Cargo.toml
sq-py/: Cargo.toml  pyproject.toml
sq-py/src/: lib.rs
sq/examples/: csv2pq.rs  dialect.rs  parquet.rs  ps.rs
sq/src/: fetch.rs  lib.rs  main.rs
src/: fetch.rs  lib.rs  main.rs  parser.rs
