[package]
name = "sq"
version = "0.1.0"
edition = "2021"
autobins = true
autoexamples = true


[dependencies]
thiserror = "1"
async-trait = "0.1"
sqlparser = "0.27"
polars = { version = "0.25", features = ["parquet", "json", "lazy"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] } 
tokio = { version = "1", features = ["full"]} 
tracing = "0.1"
regex = { version = "1", features = ["pattern"]}
lazy_static = "1"
enum_dispatch = "0.3"
itertools = "0.10"

[dev-dependencies]
tracing-subscriber = "0.2"
tokio = {version = "1", features = ["full"]}
